# Planetwars

./: Dockerfile  flake.nix
backend/: Cargo.toml
backend/src/: main.rs  util.rs
backend/src/routes/: info.rs  lobby.rs  maps.rs  mod.rs
frontend/: Cargo.toml
frontend/www/: package-lock.json  package.json
frontend/www/src/webgl/: shader.ts
