[package]
name = "planetwars"
version = "0.1.2"
authors = ["ajuvercr <arthur.vercruysse@ugent.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mozaic = { git = "https://github.com/ZeusWPI/MOZAICP" }
rand = { version = "0.8.2", default-features = true }

async-std = { version = "1.9.0", features = ["attributes"] }
futures = { version = "0.3.12", features = ["executor", "thread-pool"] }

figment = "0.10.2"

serde = "1.0.119"
serde_derive = "1.0.119"
serde_json = "1.0"
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"

[dependencies.rocket_dyn_templates]
version = "^0.1.0-rc.3"
features = ["handlebars", "tera"]

[dependencies.rocket]
version = "^0.5.0-rc.3"
features = ["json"]

[dependencies.educe]
version = "*"
features = ["Debug", "Default", "Hash", "Clone", "Copy", "PartialEq","Eq","PartialOrd","Ord"]
default-features = false
